--- a/README.textile
+++ b/README.textile
@@ -1,29 +1,15 @@
-h1. ICSE and ISC Results 2013
+h1. ICSE 2013
 
-It turns out that the "ICSE":http://www.cisce.org/icse_X.html and "ISC":http://www.cisce.org/isc_XII.html results aren't secured. Here are a bunch of scripts that help download the results, as well as include a comprehensive list of already downloaded results.
+Data and scraper located in @./icse/@.
 
-h2. Setup
+h1. ISC 2013
 
-After you clone the repository @CISCEResults2013@, navigate into @./ICSEResults13/@ or @./ISCResults13/@.
+Data and scraper located in @./isc/@.
 
-h3. Single School Data Retrieval
+h1. CBSE XII 2013
 
-Run the following: ```./getISCforSchool 9280```to get the ISC results for school ID 9280. Remember, ISC school IDs range from @9001@ to @9793@. Or you can use ```./getICSEforSchool 4670``` to get ICSE results for school ID 4670. ICSE school IDs range from @4001@ to @5568@.
+Student data in @./cbse/2013_cbse_students.csv@; student scores in @./cbse/2013_cbse_scores.csv@.
 
-h3. Range of Schools Data Retrieval
+h1. CBSE XII 2004-2010
 
-Run the following: ```./getAllISC 9280 9300```to get the ISC results for all school IDs from 9280 to 9300. Remember, ISC school IDs range from @9001@ to @9793@. Or you can use ```./getAllICSE 4670 4700``` to get ICSE results for school IDs 4670 to 4700. ICSE school IDs range from @4001@ to @5568@.
-
-h2. Pre-fetched Results By School
-
-All the results have already been fetched and can be found at @./ICSEResults13/DataBySchool/@ or @./ISCEResults13/DataBySchool/@.
-
-h2. Pre-fetched Compilation of All Results
-
-All the pre-fetched results can be found at @./ICSEResults13/AllData/AllICSEResults2013.xlsx@ or @./ISCResults13/AllData/AllISCResults2013.xlsx@. A complete list of data files are:
- *  @./ICSEResults13/AllData/AllICSEResults2013.xlsx@ - All formatted ICSE data for all students with Overall Average, Best of 5, and English + Best of 4
- *  @./ISCResults13/AllData/AllISCResults2013.xlsx@ - All formatted ISC data for all students with Overall Average, Best of 4, and English + Best of 4
- *  @./ICSEResults13/AllData/AllICSEResults2013.csv@ - All ICSE data in a comma separated value file with all the data for all students with an Overall Average as well.
- *  @./ISCResults13/AllData/AllISCResults2013.csv@ - All ISC data in a comma separated value file with all the data for all students with an Overall Average as well.
- *  @./ICSEResults13/AllData/IncompleteICSEResults2013.csv@ - ICSE data for all students who did not complete all their ICSE subjects.
- *  @./ISCResults13/AllData/IncompleteISCResults2013.csv@ - ISC data for all students who did not complete all their ISC subjects.
+Student data in @./cbse/$YEAR_cbse_students.csv@; student scores in @./cbse/$YEAR_cbse_scores.csv@.
